# aeris-llm-safety

./: CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
attacks/: REGISTRY.md
configs/: headline.yaml  smoke.yaml  smoke_defended.yaml
datasets/: attacks_full.yaml  attacks_smoke.yaml  benigns_full.yaml  benigns_smoke.yaml
defenses/: REGISTRY.md
docs/: architecture.md  methodology.md  responsible_disclosure.md  results_writeup.md  safety_posture.md  threat_model.md
results/example_run/: README.md  manifest.json  records.jsonl  report.html  summary.json
scripts/: quickstart.sh
src/aeris/: __init__.py  __main__.py  attacks.py  cli.py  defenses.py  judge.py  providers.py  report.py  runner.py  scoring.py  types.py
tests/: conftest.py  test_attack_safety.py  test_defenses.py  test_e2e_mock.py  test_providers.py  test_report.py  test_scoring.py
