[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aeris-llm-safety"
version = "0.1.0"
description = "A defensive red-teaming framework for measuring and improving LLM robustness to adversarial inputs."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "YOUR NAME", email = "you@example.com" }]
keywords = ["llm", "ai-safety", "red-teaming", "alignment", "robustness"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "tenacity>=8.2",
    "rich>=13.7",
    "typer>=0.12",
    "numpy>=1.26",
    "pandas>=2.2",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "hypothesis>=6.100",
    "types-PyYAML>=6.0",
]
providers = [
    "anthropic>=0.34",
    "openai>=1.30",
]

[project.scripts]
aeris = "aeris.cli:app"

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/aeris-llm-safety"
Issues = "https://github.com/YOUR_USERNAME/aeris-llm-safety/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
# We intentionally use unicode like α (alpha) and en-dashes in docstrings
# and report copy; these are not typos.
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
# typer idiomatically calls Option()/Argument() in argument defaults.
"src/aeris/cli.py" = ["B008"]
# report.py contains a large inline HTML/CSS Jinja template; long lines
# in the template string are not a code-style problem.
"src/aeris/report.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=aeris --cov-report=term-missing"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true

# Optional provider SDKs are imported lazily and may not be installed
# (the package runs fully on the mock provider without them). Don't fail
# strict type-checking on their absence.
[[tool.mypy.overrides]]
module = ["anthropic", "anthropic.*", "openai", "openai.*"]
ignore_missing_imports = true
